[package]
name = "libcam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcamera = {git = "https://github.com/lit-robotics/libcamera-rs"}

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [""" \
    dpkg --add-architecture arm64 && \
    apt-get update && \
    apt-get install --assume-yes --no-install-recommends \
    libx11-dev:arm64 libxrandr-dev:arm64 libasound2-dev:arm64 \
    libx11-dev:arm64 libxrandr-dev:arm64 libxi-dev:arm64 \
    libgl1-mesa-dev:arm64 libglu1-mesa-dev:arm64 \
    libxcursor-dev:arm64 libxinerama-dev:arm64 \
    libcamera-dev:arm64 g++-13-aarch64-linux-gnu:arm64
    """]
